--- a/src/App.css
+++ b/src/App.css
@@ -178,12 +178,14 @@ width: 1140px;
 }
 .post-container{
   position: relative;
-
+  margin-right: auto;
+  margin-left: auto;
 }
+
 .goBack{
   position: absolute;
-  bottom: -120px;
-  left: 470px;
+  bottom: -330px;
+  left: 240px;
   font-family: 'Montserrat';
 font-style: normal;
 font-weight: 700;
@@ -194,10 +196,17 @@ text-decoration: none;
 display: flex;
 align-items: center;
 }
+.iconCalendar{
+  margin-right: 10px;
+}
+.back{
+margin-right: 5px;
+transform: matrix(-1, 0, 0, 1, 0, 0);
+}
 .cardPost{
   position: absolute;
   top: 150px;
-  left:350px;
+  left:80px;
   max-width: 1290px;
 height: auto;
 padding-left:75px;
@@ -208,6 +217,7 @@ background: #FFFFFF;
 border: 1px solid #EAEAEA;
 box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
 border-radius: 5px;
+text-align: center;
 }
 
 .search{
