--- a/src/App.css
+++ b/src/App.css
@@ -128,12 +128,13 @@ min-block-size: 530px;
       display: -moz-box;
       -moz-box-orient: vertical;
       display: -webkit-box;
-      -webkit-line-clamp: 4;
+      -webkit-line-clamp: 3;
       -webkit-box-orient: vertical;
-      line-clamp: 4;
+      line-clamp: 3;
       box-orient: vertical;
-height: 96px;
+/* height: 96px; */
 margin-bottom: 25px;
+
 }
 .date{
   opacity: 0.6;
@@ -159,9 +160,9 @@ color: #363636;
   display: -moz-box;
   -moz-box-orient: vertical;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  line-clamp: 3;
+  line-clamp: 2;
   box-orient: vertical;
 
 }
